# MedVaani

./: .gitignore  PROJECT_CONTEXT.md  QUICKSTART.md  README.md  demo_enhanced_ai_doctor.py  demo_voice_to_voice_workflow.py  download_models.py  enhanced_model_manager.py  install.bat  install.sh  live_medical_test.py  pyproject.toml  requirements-web.txt  requirements.txt  start-dev.sh  test_api_endpoints.py  test_meerkat_diagnosis.py  test_model_output.py  test_voice_interface.py  test_voice_to_voice_consultation.py
.augment/rules/: MCP Enabler.md
api-testing/: COLLECTION_SUMMARY.md  README.md  validate_collection.py
api-testing/documentation/: API_Reference.md
api-testing/sample-data/: create_sample_audio.py  sample_patient_symptoms.txt
application/: __init__.py
application/ports/: __init__.py  audio_repository_port.py  configuration_port.py  medical_model_port.py  voice_interface_port.py
application/services/: drug_recommendation_service.py  interactive_diagnosis_service.py  progress_tracking_service.py
application/use_cases/: __init__.py  medical_analysis_use_case.py  voice_consultation_use_case.py
configs/: models.yaml  scenarios.yaml
docs/: ENHANCED_MEDICAL_DIAGNOSIS_SYSTEM.md
domain/: __init__.py
domain/entities/: __init__.py  consultation.py  medical_response.py  patient.py
domain/value_objects/: __init__.py  audio_data.py  medical_response.py  medical_symptoms.py
examples/: phase1_demo.py  phase2_demo.py
frontend/: .env.example  README.md  package.json  tsconfig.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.tsx  setupTests.ts
frontend/src/components/common/: Button.tsx  ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/src/components/consultation/: ConsultationForm.tsx
frontend/src/hooks/: useAudioRecorder.ts  useConsultation.ts  useWebSocket.ts
frontend/src/services/: apiService.ts  audioService.ts  webSocketService.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  patient.ts
frontend/src/utils/: constants.ts  errorHandler.ts  validation.ts
infrastructure/: __init__.py
infrastructure/adapters/: __init__.py  aloe_medical_adapter.py  composite_voice_interface.py  enhanced_medical_adapter.py  filesystem_audio_repository.py  meerkat_adapter.py  mock_adapters.py  speecht5_adapter.py  whisper_adapter.py
infrastructure/config/: __init__.py  app_config.py  dependency_injection.py
infrastructure/logging/: __init__.py  log_config.py  logger_factory.py  medical_logger.py  structured_logger.py
infrastructure/resilience/: __init__.py  circuit_breaker.py  retry_policy.py  timeout_handler.py
medbench/: cli.py  config.py  enhanced_cli.py  models.py  runner.py  voice_consultation.py  voice_interface.py
medbench/scenarios/: __init__.py  cds.py  diagnosis.py  drug_interactions.py  imaging.py  summarization.py
tests/: __init__.py  test_domain_entities.py  test_phase2_integration.py
web/: __init__.py  main.py  test_web_api.py
web/static/: app.js  enhanced-styles.css
web/templates/: enhanced_consultation.html  index.html
